hphp/test/zend/bad/ext/mbstring/tests/zend_multibyte-14.php
<?php
var_dump(substr(file_get_contents(__FILE__), __COMPILER_HALT_OFFSET__));
var_dump(bin2hex("äëüáéú"));
__halt_compiler();test
test